--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,3 +4,5 @@
 <h1>Это ваш профиль</h1>
 <%= @user.name %><br />
 <%= @user.email %><br />
+
+<%= link_to "Sign out", signout_path, method: "delete" %>
