--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,19 +1,20 @@
-<header class = "navbar navbar-fixed-top nabar-inverse">
+<header class = "navbar navbar-fixed-top navbar-inverse">
   <div class = "navbar-inner">
     <div class = "container">
       <%= link_to "Test app", root_path, id: "logo" %>
-      <nav>
-        <ul class = "nav pull-right">
+      <nav class = "navbar navbar-right">  
+        <ul class = "nav navbar-nav">
           <li><%= link_to "Home", root_path %></li>
           <% if signed_in? %>
-            <%= link_to "Products", "#" %></li>
-            <li id "fat-menu" class = "dropdown">
-              <a href="#" class = "dropdown-toggle" data-toggle = "dropdown">
+            <li><%= link_to "Products", "#" %></li>
+            <li class = "dropdown">
+              <a href="#" class = "dropdown-toggle" data-toggle = "dropdown" role = "button" aria-haspopup = "true" aria-expanded = "false">
                 Account
+                <span class = "caret"></span>
               </a>
               <ul class = "dropdown-menu">
                 <li><%= link_to "Profile", current_user %></li>
-                <li class = "divider"></li>
+                <li role = "separator" class = "divider"></li>
                 <li>
                   <%= link_to "Sign out", signout_path, method: "delete" %>
                 </li>
