--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,9 @@
-<h1> Sign up </h1>
-<%= form_for(@user) do |f| %>
+<div style = "text-align: center">
+    <h1> Sign up </h1>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %><br>
+    <%= form_for(@user) do |f| %>
+  
+      <%= render 'fields', object: f.object %>
 
-  <%= f.label :email %>
-  <%= f.text_field :email %><br>
-
-  <%= f.label :password %>
-  <%= f.password_field :password %><br>
-
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %><br>
-
-  <%= f.submit "Registrate me!" %>
-
-<% end %>
+    <% end %>
+</div>
