Add photo to products using carrierwave

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -8,6 +8,8 @@
   <%= f.label :description %>
   <%= f.text_area :description %><br>
 
+  <%= f.file_field :product_photo %><br>
+
   <%= f.submit "Add new product" %>
 
 <% end %>
