--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,8 +5,8 @@
       <nav class = "navbar navbar-right">  
         <ul class = "nav navbar-nav">
           <li><%= link_to "Home", root_path %></li>
+          <li><%= link_to "Products", products_path %></li>
           <% if signed_in? %>
-            <li><%= link_to "Products", "#" %></li>
             <li class = "dropdown">
               <a href="#" class = "dropdown-toggle" data-toggle = "dropdown" role = "button" aria-haspopup = "true" aria-expanded = "false">
                 Account
