--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,16 +1,29 @@
-<br>
-<br>
-<%= form_for @product do |f| %>
+<br><br>
+<div class = "center hero-unit">
+  <div class = "row">
+    <div class = "col-md-6 col-md-offset-3">
+      <%= form_for @product do |f| %>
+      
+        <div class = "form-group">
+          <%= f.label :name %><br>
+          <%= f.text_field :name%>
+        </div>
 
-  <%= f.label :name %>
-  <%= f.text_field :name%><br>
-  
-  <%= f.label :description %>
-  <%= f.text_area :description %><br>
+        <div class = "form-group">
+          <%= f.label :description %><br>
+          <%= f.text_area :description %>
+        </div>
+        
+        <div class = "fileUpload btn btn-primary">
+          <span>Upload photo <%= f.file_field :product_photo, class: "upload" %> </span>
+          <br>
+        </div>
+        <div class = "form-group">
+          <%= f.submit "Add new product", class: "btn btn-large btn-primary" %>
+        </div>
 
-  <%= f.file_field :product_photo %><br>
-
-  <%= f.submit "Add new product" %>
-
-<% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
 
