--- a/app/views/users/_fields.html.erb
+++ b/app/views/users/_fields.html.erb
@@ -1,16 +1,28 @@
- <%= form_for(object) do |f| %>
-   <%= f.label :name %>
-   <%= f.text_field :name%><br>
+<div class = "row">
+  <div class = "col-md-6 col-md-offset-3">
+    <%= form_for(object) do |f| %>
+       <div class = "form-group">
+         <%= f.label :name %><br>
+         <%= f.text_field :name%>
+       </div>
+       <div class = "form-group">
+         <%= f.label :email %><br>
+         <%= f.text_field :email %>
+       </div>
 
-   <%= f.label :email %>
-   <%= f.text_field :email %><br>
+       <div class = "form-group">
+         <%= f.label :password %><br>
+         <%= f.password_field :password %>
+       </div>
 
-   <%= f.label :password %>
-   <%= f.password_field :password %><br>
+       <div class = "form-group">
+         <%= f.label :password_confirmation, "Confirm password" %><br>
+         <%= f.password_field :password_confirmation %>
+       </div>
 
-   <%= f.label :password_confirmation, "Confirm password" %>
-   <%= f.password_field :password_confirmation %><br>
+       <%= f.submit "Registrate me!", class: "btn btn-large btn-primary" %>
 
-   <%= f.submit "Registrate me!", class: "btn btn-large btn-primary" %>
+     <% end %>
+   </div>
+</div>
 
- <% end %>
