--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,5 @@
-<% if signed_in? && (current_user==@user) =%>
-  <h1> Епрст, работает </h1>
-<% end %>
-<h1>Это ваш профиль</h1>
-<%= @user.name %><br />
-<%= @user.email %><br />
-
-<%= link_to "Sign out", signout_path, method: "delete" %>
+<div class = "center hero-unit">
+  <h1>Это ваш профиль:</h1>
+  <h2><%= @user.name %></h2><br />
+  <h2><%= @user.email %></h2><br />
+</div>
