--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class = "center hero-unit">
   <h1>Это ваш профиль:</h1>
-  <h2><%= @user.name %></h2><br />
+  <h2><%= @user.first_name %></h2><br />
   <h2><%= @user.email %></h2><br />
 </div>
