--- a/app/views/guests/new.html.erb
+++ b/app/views/guests/new.html.erb
@@ -1,4 +1,4 @@
-<br><br>
+<div class = "center hero-unit">
 <div class = "row">
   <h1>Guest's registration</h1>
   <div class = "col-md-6 col-md-offset-3">
@@ -23,4 +23,5 @@
 
      <% end %>
    </div>
+</div>
 </div>
