--- a/app/views/shop_owners/new.html.erb
+++ b/app/views/shop_owners/new.html.erb
@@ -1,4 +1,4 @@
-<br><br>
+<div class = "center hero-unit">
 <div class = "row">
   <h1>Shop owner's registration</h1>
   <div class = "col-md-6 col-md-offset-3">
@@ -33,3 +33,5 @@
      <% end %>
    </div>
 </div>
+</div>
+
