--- a/app/views/admins/show.html.erb
+++ b/app/views/admins/show.html.erb
@@ -1,4 +1,9 @@
 <div class = "center hero-unit">
+<br> <br>
+  <% if flash[:notice] %>
+    <div class = "notice"><%= flash[:notice] %></div>
+  <% end %>
+
   <h1>Это ваш профиль:</h1>
   <h2><%= @admin.first_name %></h2><br />
   <h2><%= @admin.last_name %></h2><br />
