--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,12 @@
 </head>
 <body>
   <%= render 'layouts/header' %>
-<%= yield %>
+  <div class="container">
+    <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>"><%= value %></div>
+    <% end %>
 
+    <%= yield %>
+  </div>
 </body>
 </html>
