Finish add change user's type functionality
I'am not add validation for this action into model

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,10 @@
 <br>
-<% @users.each do |f| %>
-  <%=f.name%> <br />
-  <%=f.email%>
-
-<% end %>
+<br>
+<div class = "center hero-unit">
+  <ul class = "products">
+    <% @users.each do |f| %>
+      <li>
+       <h3><%= link_to f.email, user_path(f.id) %></h3><br>
+    <% end %>
+  </ul>
+</div>
