New changes to user change type functional
Delete all methods whit does't work. Use change type thought update action

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,15 +1,15 @@
 <br>
 <div class = "center hero-unit">
 
-  <% if signed_in? && current_user.type == "Admin" %>
+  <% if signed_in? && current_user.admin? %>
     <%= form_for(@product) do |f| %>
       <%= f.label "Mark it 'Pro'" %>
-      <%= f.check_box :pro %>
-      <%= f.submit "Mark" %>
+      <%= f.check_box :pro %><br /><br />
+      <%= f.submit "Mark", class: 'btn btn-large btn-primary' %>
     <% end %>
   <% end %>
   
-  <% if signed_in? && current_user.type != "Guest" %>
+  <% if signed_in? && !current_user.guest? %>
     <h1>Shop name: <%= @product.shop_name %> </h1>
   <% end %>
 
@@ -22,5 +22,5 @@
 
   <%= image_tag @product.product_photo_url(:medium) %>
   <br /> <br>
-  <%= link_to "Buy", buy_product_path(product_id: @product.id), class: "btn btn-large btn-primary" %>
+  <%= link_to 'Buy', buy_product_path(product_id: @product.id), class: "btn btn-large btn-primary" %>
 </div>
